--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Project3)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Project3 main.cpp)
+add_executable(Project3 main.cpp
+        Graph.h
+        Graph.cpp)
